--- a/package.json
+++ b/package.json
@@ -9,18 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "^3.45.0",
+    "@stripe/stripe-js": "^3.5.0",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "next-auth-sanity": "^1.5.3",
+    "next-sanity": "^9.3.10",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "sanity": "^3.45.0",
+    "stripe": "^15.11.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
